--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     <strong class="text__p--strong">CV INTERACTIF EN LIGNE</strong></br>
                     <em class="text__p--info">HTML5, CSS3/Sass, JavaScript/jQuery</em></br>
                     <span class="text__p--low">
-                        Création d'un CV interactif hébergé en ligne en autodidacte complet</br>
+                        Création d'un CV interactif hébergé en ligne en autonomie complète</br>
                         Utilisation des keyframes et transitions CSS</br>
                         Utilisation des événements et des effets JavaScript/jQuery</br>
                         Maniement de l'asynchrone</br>
@@ -248,7 +248,7 @@
                         Création d'un Snake game en pur JavaScript</br>
                         Utilisation des canvas</br>
                         Utilisation des événements JavaScript</br>
-                        Ajout de fonctionnalités tel que le déplacement et l'évolution du serpent,</br>l'apparition des pommes et le Game Over</br>
+                        Ajout de fonctionnalités telles que le déplacement et l'évolution du serpent,</br>l'apparition des pommes et le Game Over</br>
                     </span>
                 </p></br></br>
                 <p class="text__p">
