--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="css/style.css" rel="stylesheet" />
         <link rel="preload" href="css/fonts/Oswald-Regular.ttf" as="font" type="font/ttf">
-        <link rel="preload" href="DroidSerif-Regular-webfont.ttf" as="font" type="font/ttf">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <link rel="preload" href="css/fonts/DroidSerif-Regular-webfont.ttf" as="font" type="font/ttf">
+        <script src="jQuery/jquery.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
+        <div class="loader"></div>
         <header class="header">
             <h1 class="header__titre">Michaël Fournier</h1>
         </header>
