--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet" />
         <link rel="preload" href="css/fonts/Oswald-Regular.ttf" as="font" type="font/ttf">
         <link rel="preload" href="css/fonts/DroidSerif-Regular-webfont.ttf" as="font" type="font/ttf">
-        <script src="jQuery/jquery.js"></script>
+        <script src="js/jquery.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
