--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         <script type="text/javascript" src="js/script.js"></script>
     </head>
     <body>
-        <div class="loader"></div>
+        <div class="loader">
+            <div class="loader__wheel">
+                <img src="images/loader.png" alt="loader" class="loader__wheel--img" width="150px" class="loader__wheel--img" />
+                <p class="text text__p text__p--strong">Veuillez patienter...</p>
+            </div>
+        </div>
         <header class="header">
             <h1 class="header__titre">Michaël Fournier</h1>
         </header>
@@ -41,7 +46,7 @@
         </div>
         <div class="btn-linkedin" title="Consulter la page linkedin">
             <a href="https://www.linkedin.com/in/michael-fournier97/" target="_blank">
-                <img src="images/linkedin.png" width="47px" height="45px" />
+                <img src="images/linkedin.png" alt="linkedin" width="47px" height="45px" />
             </a>
         </div>
         <section class="identite">
@@ -54,7 +59,7 @@
             <div class="section-bloc identite-bloc">
                 <div class="text">
                     <h3 class="text__titre">Résumé</h3>
-                    <img alt="face" src="images/face.png" class="text__img">
+                    <img alt="face" src="images/face.png" alt="face" class="text__img">
                     <p class="text__p text__p--low">
                         Né à Grasse en 1997, j'ai effectué toute ma scolarité dans la région.</br>
                         Voyageur et amateur de chocs culturels, guitariste et motard, j'aime la littérature, la mécanique, la musique, la randonnée et j'adore découvrir de nouvelles cultures.</br>
