--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <h3 class="text__titre">Qualités professionnelles</h3>
                     <p class="text__p text__p--low">
                         Réfléchi, Appliqué et Méthodique sont mes mots maîtres.</br>
-                        J'aime prendre des initiatives, tout en respectant les méthodes de travail !</br>
+                        J'aime prendre des initiatives dans le respect des méthodes de travail.</br>
                         Le Bartending m'a appris à être très résistant à la pression et à garder mon sang-froid.</br></br>
                     </p>
                 </div>
@@ -123,7 +123,8 @@
                 <h3 class="text__titre">Mes formations</h3></br></br>
                 <p class="text__p">
                     <strong class="text__p--strong">DÉVELOPPEUR - DIPLÔME RNCP NIVEAU III (BAC+2)</strong></br>
-                    <em class="text__p--info">Openclassrooms | 2021 Juin - En cours</em></br>
+                    <em class="text__p--info"><a href="https://openclassrooms.com/fr/" class="text__p--link" title="Consulter le site web" target="_blank">
+                    Openclassrooms</a> | 2021 Juin - En cours</em></br>
                     <span class="text__p--low">
                         Améliorer le référencement naturel grâce à la sémantique des balises</br>
                         Se connecter à un service web pour exploiter des données tierces (API)</br>
@@ -133,7 +134,9 @@
                 </p></br></br>
                 <p class="text__p">
                     <strong class="text__p--strong">DÉVELOPPEUR WEB EN AUTODIDACTE</strong></br>
-                    <em class="text__p--info">Openclassrooms, Udemy | 2020 Octobre - 2021 Juin</em></br>
+                    <em class="text__p--info"><a href="https://openclassrooms.com/fr/" class="text__p--link" title="Consulter le site web" target="_blank">
+                    Openclassrooms</a>, <a href="https://www.udemy.com/" class="text__p--link" title="Consulter le site web" target="_blank">
+                    Udemy</a> | 2020 Octobre - 2021 Juin</em></br>
                     <span class="text__p--low">
                         Assembler les éléments d'une maquette graphique en HTML5 et CSS3</br>
                         Animer les pages web et les rendre interactives en CSS3 et JavaScript</br>
@@ -142,7 +145,8 @@
                 </p></br></br>
                 <p class="text__p">
                     <strong class="text__p--strong">CQP BARMAN DU MONDE DE LA NUIT</strong></br>
-                    <em class="text__p--info">Prom'Hôte Ifitel, Cannes | 2018 Juin - Novembre</em></br>
+                    <em class="text__p--info"><a href="https://www.promhote.net/fr/33-nos-centres-formations/75-promhote-cannes" class="text__p--link" title="Consulter le site web" target="_blank">
+                    Prom'Hôte Ifitel</a>, Cannes | 2018 Juin - Novembre</em></br>
                     <span class="text__p--low">
                         Apprentissage des méthodes de travail et des conceptions de cocktails contemporains</br>
                         Acquisition de connaissances en sommellerie et autres boissons diverses</br>
@@ -150,7 +154,8 @@
                 </p></br></br>
                 <p class="text__p">
                     <strong class="text__p--strong">MANAA GRAPHISTE</strong></br>
-                    <em class="text__p--info">Institut ILEC, Cannes | 2015 - 2016</em></br>
+                    <em class="text__p--info"><a href="https://www.ilec.fr/ecole/centre-formation-alternance-nice-cannes" class="text__p--link" title="Consulter le site web" target="_blank">
+                    Institut ILEC</a>, Cannes | 2015 - 2016</em></br>
                     <span class="text__p--low">
                         Utilisation des outils du Graphiste (Illustrator, Photoshop, InDesign)</br>
                         Acquisition de connaissances en histoire de l'art</br>
@@ -158,7 +163,8 @@
                 </p></br></br>
                 <p class="text__p">
                     <strong class="text__p--strong">BAC STI2D OPTION SYSTÈMES INFORMATIQUES ET NUMÉRIQUES</strong></br>
-                    <em class="text__p--info">Lycée Jules Ferry, Cannes | Promotion 2015</em></br>
+                    <em class="text__p--info"><a href="https://julesferry-cannes.fr/" class="text__p--link" title="Consulter le site web" target="_blank">
+                    Lycée Jules Ferry</a>, Cannes | Promotion 2015</em></br>
                     <span class="text__p--low">
                         Domaine du développement durable</br>
                         Apprentissage des bases du codage informatique</br>
@@ -177,7 +183,8 @@
                 <h3 class="text__titre">Mon parcours professionnel</h3></br></br>
                 <p class="text__p">
                     <strong class="text__p--strong">BARTENDER</strong></br>
-                    <em class="text__p--info">L'Abreuvoir, Mougins | 2020 Juin - Octobre</em></br>
+                    <em class="text__p--info"><a href="https://www.facebook.com/labreuvoirdemougins/" class="text__p--link" title="Consulter la page facebook" target="_blank">
+                        L'Abreuvoir</a>, Mougins | 2020 Juin - Octobre</em></br>
                     <span class="text__p--low">
                         Effectuer la mise en place, les préparations et le service du soir</br>
                         Travail sous pression</br>
@@ -186,7 +193,8 @@
                 </p></br>
                 <p class="text__p">
                     <strong class="text__p--strong">ASSISTANT MANAGER</strong></br>
-                    <em class="text__p--info">Super U, Plascassier | 2019 Juillet - Octobre</em></br>
+                    <em class="text__p--info"><a href="https://www.facebook.com/superuplascassier" class="text__p--link" title="Consulter la page facebook" target="_blank">
+                    Super U</a>, Plascassier | 2019 Juillet - Octobre</em></br>
                     <span class="text__p--low">
                         Conseiller/Fidéliser la clientèle, Gérer les stocks, Mettre en rayon</br>
                         Conseiller le Manager, Effectuer les mises en place promotionnelles</br>
@@ -195,7 +203,8 @@
                 </p></br>
                 <p class="text__p">
                     <strong class="text__p--strong">BARTENDER</strong></br>
-                    <em class="text__p--info">L'Abreuvoir, Mougins | 2018 Octobre - Décembre</em></br>
+                    <em class="text__p--info"><a href="https://www.facebook.com/labreuvoirdemougins/" class="text__p--link" title="Consulter la page facebook" target="_blank">
+                    L'Abreuvoir</a>, Mougins | 2018 Octobre - Décembre</em></br>
                     <span class="text__p--low">
                         Effectuer la mise en place, les préparations et le service du soir</br>
                         Travail sous pression</br>
@@ -213,7 +222,8 @@
                 </p></br>
                 <p class="text__p">
                     <strong class="text__p--strong">EQUIPIER DE VENTE</strong></br>
-                    <em class="text__p--info">Carrefour Hypermarché, Antibes | 2017 Mai - Septembre</em></br>
+                    <em class="text__p--info"><a href="https://www.facebook.com/carrefourantibes" class="text__p--link" title="Consulter la page facebook" target="_blank">
+                    Carrefour Hypermarché</a>, Antibes | 2017 Mai - Septembre</em></br>
                     <span class="text__p--low">
                         Conseiller/Fidéliser la clientèle, Gérer les stocks, Mettre en rayon</br>
                         Formation à l'utilisation de transpalettes électriques et gerbeurs</br>
@@ -221,7 +231,8 @@
                 </p></br>
                 <p class="text__p">
                     <strong class="text__p--strong">CONSEILLER/VENDEUR</strong></br>
-                    <em class="text__p--info">Cash Express, Mandelieu | 2016 Novembre - 2017 Janvier</em></br>
+                    <em class="text__p--info"><a href="https://www.facebook.com/carrefourantibes" class="text__p--link" title="Consulter la page facebook" target="_blank">
+                    Cash Express</a>, Mandelieu | 2016 Novembre - 2017 Janvier</em></br>
                     <span class="text__p--low">
                         Conseiller/Fidéliser la clientèle, Tenir la caisse occasionnellement</br>
                         Magasin d'achat et de vente d'occasion (Informatique, Téléphonie ... )</br>
@@ -266,7 +277,7 @@
                         Création d'un site web sur le thème de la moto pour les permis A2</br>
                         Exercice pour l'acquisition de compétences en HTML5 et CSS3</br>
                     </span>
-                </p></br></br>
+                </p>
             </div>
         </section>
     </body>
