--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         Télecharger mon CV</br>
                     </p>
                     <a href="download/CV_Michaël_Fournier_Web.pdf" target="_blank">
-                        <img src="images/download.png" class="btn-download" title="Télecharger le pdf" width="80px" />
+                        <img src="images/download.png" class="btn-download" title="Télecharger le pdf" />
                     </a>
                 </div>
             </div>
