--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <div class="text">
                     <h3 class="text__titre">Qualités professionnelles</h3>
                     <p class="text__p text__p--low">
-                        Réfléchi, Appliqué et Méthodique sont mes mots maîtres.</br>
-                        J'aime prendre des initiatives dans le respect des méthodes de travail.</br>
-                        Le Bartending m'a appris à être très résistant à la pression et à garder mon sang-froid.</br></br>
+                        Réfléchi, Curieux et objectif sont mes mots maîtres.</br>
+                        J'ai un esprit concret et logique.</br>
+                        Je suis très adaptable en toute situation, que ce soit en groupe ou en autonomie.</br></br>
                     </p>
                 </div>
                 <div class="text">
