--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2 class="nav__btn">Mon parcours</h2>
                 <h2 class="nav__btn">Mes projets</h2>
             </div>
-            <div class="nav__btn-menu">Menu▾</div>
+            <div class="nav__btn-menu">Menu<span class="nav__btn-menu--arrow">↡</span></div>
             <div class="nav__container nav__container--menu">
                 <h2 class="nav__btn">Qui suis-je?</h2>
                 <h2 class="nav__btn">Mes formations</h2>
