--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div class="loader">
             <div class="loader__wheel">
-                <img src="images/loader.png" alt="loader" class="loader__wheel--img" width="120px" class="loader__wheel--img" />
+                <img src="images/loader.png" alt="loader" class="loader__wheel--img" class="loader__wheel--img" />
                 <p class="text text__p text__p--strong">Veuillez patienter...</p>
             </div>
         </div>
